Add watch tasks and list from directory

--- a/gulp/config.json
+++ b/gulp/config.json
@@ -2,6 +2,7 @@
   "paths": {
     "public": "public/",
     "views": "views/",
+    "components": "views/components/",
     "assets" : "assets/",
     "nodeModules": "node_modules/"
   }
