--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "csswring": "^6.0.3",
     "fs": "0.0.1-security",
     "gulp": "^3.9.1",
+    "gulp-a11y": "^0.1.2",
     "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
     "gulp-if": "^2.0.2",
