--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "description": "Node JS boilerplate",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
   },
-  "scripts": {
-    "start": "node index.js"
-  }
   "author": "Cathy Dutton",
   "license": "ISC",
   "dependencies": {
