--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node JS boilerplate",
   "main": "app.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node app.js"
   },
   "author": "Cathy Dutton",
   "license": "ISC",
