--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "Pod",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Pod component library",
   "main": "app.js",
   "scripts": {
-    "start": "gulp"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "Cathy Dutton",
   "license": "ISC",
