--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express": "^4.16.3",
     "nunjucks": "^3.1.2",
     "autoprefixer": "^8.3.0",
-    "postcss": "^6.0.21",
+    "postcss": "^6.0.21"
+  },
+  "devDependencies": {
     "css-mqpacker": "^6.0.2",
     "csswring": "^6.0.3",
     "fs": "0.0.1-security",
