--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "express": "^4.16.3",
     "nunjucks": "^3.1.2",
     "autoprefixer": "^8.3.0",
-    "postcss": "^6.0.21"
-  },
-  "devDependencies": {
+    "postcss": "^6.0.21",
     "css-mqpacker": "^6.0.2",
     "csswring": "^6.0.3",
     "fs": "0.0.1-security",
@@ -39,5 +37,8 @@
     "postcss-import": "^11.1.0",
     "require-dir": "^1.0.0",
     "run-sequence": "^2.2.1"
+  },
+  "devDependencies": {
+ 
   }
 }
