--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "gulp",
     "start": "node app.js",
-    "postinstall": "gulp"
   },
   "author": "Cathy Dutton",
   "license": "ISC",
