--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.1",
   "description": "Pod component library",
   "main": "app.js",
+  "types": "app.js.d.ts",
   "engines": {
     "node": ">=6.11.1 <7.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "gulp",
     "start": "node app.js"
   },
   "author": "Cathy Dutton",
@@ -19,26 +19,26 @@
     "express": "^4.16.3",
     "nunjucks": "^3.1.2",
     "autoprefixer": "^8.3.0",
-    "postcss": "^6.0.21",
+    "postcss": "^6.0.21"
+  },
+  "devDependencies": {
+    "gulp-postcss": "^8.0.0",
+    "postcss-import": "^11.1.0",
     "css-mqpacker": "^6.0.2",
     "csswring": "^6.0.3",
+    "gulp-livereload": "^3.8.1",
+    "gulp-imagemin": "^4.1.0",
     "fs": "0.0.1-security",
     "gulp": "^3.9.1",
     "gulp-a11y": "^0.1.2",
     "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
     "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^4.1.0",
-    "gulp-livereload": "^3.8.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-uglifyes": "^0.1.3",
     "nodemon": "^1.17.3",
     "path": "^0.12.7",
-    "postcss-import": "^11.1.0",
     "require-dir": "^1.0.0",
     "run-sequence": "^2.2.1"
-  },
-  "devDependencies": {
-    
   }
 }
