--- a/package.json
+++ b/package.json
@@ -22,22 +22,23 @@
     "postcss": "^6.0.21"
   },
   "devDependencies": {
-    "gulp-postcss": "^8.0.0",
-    "postcss-import": "^11.1.0",
     "css-mqpacker": "^6.0.2",
     "csswring": "^6.0.3",
-    "gulp-livereload": "^3.8.1",
-    "gulp-imagemin": "^4.1.0",
     "fs": "0.0.1-security",
     "gulp": "^3.9.1",
     "gulp-a11y": "^0.1.2",
     "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
     "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-livereload": "^3.8.1",
     "gulp-nodemon": "^2.2.1",
+    "gulp-nunjucks-render": "^2.2.2",
+    "gulp-postcss": "^8.0.0",
     "gulp-uglifyes": "^0.1.3",
     "nodemon": "^1.17.3",
     "path": "^0.12.7",
+    "postcss-import": "^11.1.0",
     "require-dir": "^1.0.0",
     "run-sequence": "^2.2.1"
   }
